# labs_oop

./: .gitignore  cmake_example.txt
.cache/clangd/index/: array.hpp.8E943E5096E40297.idx  childs.hpp.F0AD48F99719E8EC.idx  figure.hpp.40E6B1F0FB6A2580.idx  main.cpp.27F657715FBD5325.idx
lab1/: CMakeLists.txt
lab1/src/: function.cpp  main.cpp
lab1/test/: test.cpp
lab2/: CMakeLists.txt
lab2/include/: Money.hpp
lab2/src/: Money.cpp  main.cpp
lab2/test/: test.cpp
lab3/: CMakeLists.txt
lab3/include/: figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp
lab3/src/: figure.cpp  main.cpp
lab3/test/: tests.cpp
lab4/: CMakeLists.txt
lab4/include/: childs.hpp  figure.hpp
lab4/src/: main.cpp
lab5/: CMakeLists.txt
lab5/include/: array.hpp  memory.hpp
lab5/src/: array.tpp  main.cpp  memory.cpp
lab6/src/: 3  3.tpl  field.cpp  log.txt  main  main.cpp
